<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dhbw.mschoech.muehlemenuefuehrung.Fields">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strButBack"
        android:id="@+id/buttonBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:text="@string/strField1"
        android:id="@+id/buttonField1"
        android:src="@drawable/spielbrett1080"
        android:layout_below="@+id/textVersus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <ImageButton
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:text="@string/strField2"
        android:id="@+id/buttonField2"
        android:layout_alignTop="@+id/buttonField1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_launcher"/>

    <ImageButton
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:text="@string/strField3"
        android:id="@+id/buttonField3"
        android:src="@mipmap/ic_launcher"
        android:layout_above="@+id/buttonBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp" />

    <ImageButton
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:text="@string/strField4"
        android:id="@+id/buttonField4"
        android:layout_alignTop="@+id/buttonField3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_launcher"
        android:adjustViewBounds="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strVersus"
        android:id="@+id/textVersus"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
