<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dhbw.mschoech.muehlemenuefuehrung.Options">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strOpt"
        android:id="@+id/textOptionen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCol1"
        android:id="@+id/buttonColor1"
        android:layout_below="@+id/textOptionen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCol2"
        android:id="@+id/buttonColor2"
        android:layout_below="@+id/buttonColor1"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strButBack"
        android:id="@+id/buttonBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCol3"
        android:id="@+id/buttonColor3"
        android:layout_below="@+id/buttonColor2"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageButtonLightToken"
        android:src="@drawable/spielstein_hell"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        
        android:layout_below="@+id/imageButtonDarkToken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageButtonDarkToken"
        android:src="@drawable/spielstein_dunkel"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />



</RelativeLayout>
